crates/parser/src/snapshots/squawk_parser__parse__tests__close_portal_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: ClosePortalStmt(
                Object({
                    "portalname": String(
                        "curs1",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                12,
            ),
        },
    ],
)
