crates/parser/src/snapshots/squawk_parser__parse__tests__create_enum_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateEnumStmt(
                Object({
                    "typeName": Array([
                        Object({
                            "String": Object({
                                "sval": String(
                                    "happiness",
                                ),
                            }),
                        }),
                    ]),
                    "vals": Array([
                        Object({
                            "String": Object({
                                "sval": String(
                                    "happy",
                                ),
                            }),
                        }),
                        Object({
                            "String": Object({
                                "sval": String(
                                    "very happy",
                                ),
                            }),
                        }),
                        Object({
                            "String": Object({
                                "sval": String(
                                    "ecstatic",
                                ),
                            }),
                        }),
                    ]),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                66,
            ),
        },
    ],
)
