crates/parser/src/snapshots/squawk_parser__parse__tests__create_plang_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreatePLangStmt(
                Object({
                    "plhandler": Array([
                        Object({
                            "String": Object({
                                "sval": String(
                                    "plpgsql_call_handler",
                                ),
                            }),
                        }),
                    ]),
                    "plname": String(
                        "plpgsql",
                    ),
                    "pltrusted": Bool(
                        true,
                    ),
                    "plvalidator": Array([
                        Object({
                            "String": Object({
                                "sval": String(
                                    "plpgsql_validator",
                                ),
                            }),
                        }),
                    ]),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                108,
            ),
        },
    ],
)
