crates/parser/src/snapshots/squawk_parser__parse__tests__create_range_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateRangeStmt(
                Object({
                    "params": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            49,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "float8",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "subtype",
                                ),
                                "location": Number(
                                    39,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "TypeName": Object({
                                        "location": Number(
                                            76,
                                        ),
                                        "names": Array([
                                            Object({
                                                "String": Object({
                                                    "sval": String(
                                                        "float8mi",
                                                    ),
                                                }),
                                            }),
                                        ]),
                                        "typemod": Number(
                                            -1,
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "subtype_diff",
                                ),
                                "location": Number(
                                    61,
                                ),
                            }),
                        }),
                    ]),
                    "typeName": Array([
                        Object({
                            "String": Object({
                                "sval": String(
                                    "floatrange",
                                ),
                            }),
                        }),
                    ]),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                86,
            ),
        },
    ],
)
