crates/parser/src/snapshots/squawk_parser__parse__tests__create_table_as_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateTableAsStmt(
                Object({
                    "into": Object({
                        "onCommit": String(
                            "ONCOMMIT_NOOP",
                        ),
                        "rel": Object({
                            "inh": Bool(
                                true,
                            ),
                            "location": Number(
                                14,
                            ),
                            "relname": String(
                                "films2",
                            ),
                            "relpersistence": String(
                                "p",
                            ),
                        }),
                    }),
                    "objtype": String(
                        "OBJECT_TABLE",
                    ),
                    "query": Object({
                        "SelectStmt": Object({
                            "fromClause": Array([
                                Object({
                                    "RangeVar": Object({
                                        "inh": Bool(
                                            true,
                                        ),
                                        "location": Number(
                                            32,
                                        ),
                                        "relname": String(
                                            "films",
                                        ),
                                        "relpersistence": String(
                                            "p",
                                        ),
                                    }),
                                }),
                            ]),
                            "limitOption": String(
                                "LIMIT_OPTION_DEFAULT",
                            ),
                            "op": String(
                                "SETOP_NONE",
                            ),
                            "targetList": Array([
                                Object({
                                    "ResTarget": Object({
                                        "location": Number(
                                            -1,
                                        ),
                                        "val": Object({
                                            "ColumnRef": Object({
                                                "fields": Array([
                                                    Object({
                                                        "A_Star": Object({}),
                                                    }),
                                                ]),
                                                "location": Number(
                                                    -1,
                                                ),
                                            }),
                                        }),
                                    }),
                                }),
                            ]),
                        }),
                    }),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                37,
            ),
        },
    ],
)
