crates/parser/src/snapshots/squawk_parser__parse__tests__create_trigger_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateTrigStmt(
                Object({
                    "events": Number(
                        16,
                    ),
                    "funcname": Array([
                        Object({
                            "String": Object({
                                "sval": String(
                                    "check_account_update",
                                ),
                            }),
                        }),
                    ]),
                    "relation": Object({
                        "inh": Bool(
                            true,
                        ),
                        "location": Number(
                            50,
                        ),
                        "relname": String(
                            "accounts",
                        ),
                        "relpersistence": String(
                            "p",
                        ),
                    }),
                    "row": Bool(
                        true,
                    ),
                    "timing": Number(
                        2,
                    ),
                    "trigname": String(
                        "check_update",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                120,
            ),
        },
    ],
)
