crates/parser/src/snapshots/squawk_parser__parse__tests__create_user_mapping_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: CreateUserMappingStmt(
                Object({
                    "options": Array([
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "sval": String(
                                            "bob",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "user",
                                ),
                                "location": Number(
                                    48,
                                ),
                            }),
                        }),
                        Object({
                            "DefElem": Object({
                                "arg": Object({
                                    "String": Object({
                                        "sval": String(
                                            "secret",
                                        ),
                                    }),
                                }),
                                "defaction": String(
                                    "DEFELEM_UNSPEC",
                                ),
                                "defname": String(
                                    "password",
                                ),
                                "location": Number(
                                    60,
                                ),
                            }),
                        }),
                    ]),
                    "servername": String(
                        "foo",
                    ),
                    "user": Object({
                        "location": Number(
                            24,
                        ),
                        "rolename": String(
                            "bob",
                        ),
                        "roletype": String(
                            "ROLESPEC_CSTRING",
                        ),
                    }),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                78,
            ),
        },
    ],
)
