crates/parser/src/snapshots/squawk_parser__parse__tests__create_view_stmt.snap
---
source: parser/src/parse.rs
expression: res
---
Ok(
    [
        RawStmt {
            stmt: ViewStmt(
                Object({
                    "query": Object({
                        "SelectStmt": Object({
                            "limitOption": String(
                                "LIMIT_OPTION_DEFAULT",
                            ),
                            "op": String(
                                "SETOP_NONE",
                            ),
                            "targetList": Array([
                                Object({
                                    "ResTarget": Object({
                                        "location": Number(
                                            29,
                                        ),
                                        "val": Object({
                                            "A_Const": Object({
                                                "location": Number(
                                                    29,
                                                ),
                                                "sval": Object({
                                                    "sval": String(
                                                        "Hello World",
                                                    ),
                                                }),
                                            }),
                                        }),
                                    }),
                                }),
                            ]),
                        }),
                    }),
                    "view": Object({
                        "inh": Bool(
                            true,
                        ),
                        "location": Number(
                            13,
                        ),
                        "relname": String(
                            "vista",
                        ),
                        "relpersistence": String(
                            "p",
                        ),
                    }),
                    "withCheckOption": String(
                        "NO_CHECK_OPTION",
                    ),
                }),
            ),
            stmt_location: 0,
            stmt_len: Some(
                42,
            ),
        },
        RawStmt {
            stmt: ViewStmt(
                Object({
                    "query": Object({
                        "SelectStmt": Object({
                            "fromClause": Array([
                                Object({
                                    "RangeVar": Object({
                                        "inh": Bool(
                                            true,
                                        ),
                                        "location": Number(
                                            90,
                                        ),
                                        "relname": String(
                                            "films",
                                        ),
                                        "relpersistence": String(
                                            "p",
                                        ),
                                    }),
                                }),
                            ]),
                            "limitOption": String(
                                "LIMIT_OPTION_DEFAULT",
                            ),
                            "op": String(
                                "SETOP_NONE",
                            ),
                            "targetList": Array([
                                Object({
                                    "ResTarget": Object({
                                        "location": Number(
                                            79,
                                        ),
                                        "val": Object({
                                            "ColumnRef": Object({
                                                "fields": Array([
                                                    Object({
                                                        "A_Star": Object({}),
                                                    }),
                                                ]),
                                                "location": Number(
                                                    79,
                                                ),
                                            }),
                                        }),
                                    }),
                                }),
                            ]),
                            "whereClause": Object({
                                "A_Expr": Object({
                                    "kind": String(
                                        "AEXPR_OP",
                                    ),
                                    "lexpr": Object({
                                        "ColumnRef": Object({
                                            "fields": Array([
                                                Object({
                                                    "String": Object({
                                                        "sval": String(
                                                            "kind",
                                                        ),
                                                    }),
                                                }),
                                            ]),
                                            "location": Number(
                                                106,
                                            ),
                                        }),
                                    }),
                                    "location": Number(
                                        111,
                                    ),
                                    "name": Array([
                                        Object({
                                            "String": Object({
                                                "sval": String(
                                                    "=",
                                                ),
                                            }),
                                        }),
                                    ]),
                                    "rexpr": Object({
                                        "A_Const": Object({
                                            "location": Number(
                                                113,
                                            ),
                                            "sval": Object({
                                                "sval": String(
                                                    "Comedy",
                                                ),
                                            }),
                                        }),
                                    }),
                                }),
                            }),
                        }),
                    }),
                    "view": Object({
                        "inh": Bool(
                            true,
                        ),
                        "location": Number(
                            56,
                        ),
                        "relname": String(
                            "comedies",
                        ),
                        "relpersistence": String(
                            "p",
                        ),
                    }),
                    "withCheckOption": String(
                        "NO_CHECK_OPTION",
                    ),
                }),
            ),
            stmt_location: 43,
            stmt_len: Some(
                78,
            ),
        },
    ],
)
